# kursach1-arkanoid

arkanoid/: readme.txt
arkanoid/src/: CMakeLists.txt  app.h  ball.h  block.cpp  block.h  checkbox.h  main.cpp  platform.h  window.h
arkanoid/src/levels/: 1.txt  2.txt
src/: CMakeLists.txt  app.h  ball.h  block.cpp  block.h  checkbox.h  main.cpp  platform.h  window.h
src/levels/: 1.txt  2.txt
